tests/vm/tnilref.nim
discard """
  errormsg: "attempt to access a nil address"
"""

static:
    var s: ref int
    s[] = 1